--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body{
     background-image: url(../images/d2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
+    height:600px;
     background-size: cover;
 }
 /*@media screen and (min-width: 1300px){
